--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -8,7 +8,9 @@
 name: ANSIBLECOLLECTION
 
 on: # yamllint disable-line rule:truthy
-  workflow_dispatch:
+
+  # make it reusable
+  workflow_call:
 
 jobs:
 
