add runs-on to reusable workflow

--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -15,6 +15,7 @@ on: # yamllint disable-line rule:truthy
 jobs:
 
   ansible-test:
+    runs-on: ubuntu-22.04
 
     strategy:
       fail-fast: false
