try input variable and defaults to test myself

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,11 +22,28 @@ on: # yamllint disable-line rule:truthy
 
 jobs:
 
-  ANSIBLECOLLECTION:
+    NEWCOLLECTION:
+
+    # don't run on pull request from ourselves
+    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     runs-on: ubuntu-22.04
+    defaults:
+      run:
+        working-directory: ansible_collections/mafalb
 
     steps:
 
-      - name: Placeholder
-        run: echo hello
+      - name: create a new collection
+        run: |
+          mkdir -p collections/ansible_collections
+          cd collections/ansible_collections
+          ansible-galaxy collection init --collection-skeleton https://github.com/mafalb/ansible_collection_skeleton mafalb.ci
+
+
+  ANSIBLECOLLECTION:
+    uses: ./reusable-ansiblecollection.yml@
+    with:
+      repo: mafalb/ansible-collection-ansible
+    needs: NEWCOLLECTION
+
 ...
