--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -130,17 +130,17 @@ jobs:
           ANSIBLE_LINT_VERSION=$(NO_COLOR=1 ansible-lint --version | awk '/^ansible-lint / {print $2}')
           if [[ "$ANSIBLE_LINT_VERSION" =~ ^4 ]]; then
               if test -f .ansible-lint-4; then
-	                echo "ansible-lint -c .ansible-lint-4 ${ANSIBLE_LINT_VERSION}..."
+	                echo "ansible-lint -c .ansible-lint-4 $ANSIBLE_LINT_VERSION..."
 	                ansible-lint -v -c .ansible-lint-4
               fi
           elif test "${ANSIBLE_LINT_VERSION}" == "6.8.6" -a -f .ansible-lint-6.8.6; then
-	            echo "ansible-lint ${ANSIBLE_LINT_VERSION}..."
+	            echo "ansible-lint $ANSIBLE_LINT_VERSION..."
 	            ansible-lint -v --offline -c .ansible-lint-6.8.6
-          elif test -f .ansible-lint-"${ANSIBLE_LINT_VERSION}"; then
-	            echo "ansible-lint -c .ansible-lint-${ANSIBLE_LINT_VERSION}..."
-	            ansible-lint -v -c .ansible-lint-"${ANSIBLE_LINT_VERSION}"
+          elif test -f .ansible-lint-"$ANSIBLE_LINT_VERSION"; then
+	            echo "ansible-lint -c .ansible-lint-$ANSIBLE_LINT_VERSION..."
+	            ansible-lint -v -c .ansible-lint-"$ANSIBLE_LINT_VERSION"
           else
-	            echo "ansible-lint ${ANSIBLE_LINT_VERSION}..."
+	            echo "ansible-lint $ANSIBLE_LINT_VERSION..."
 	            ansible-lint -v
           fi
 
