--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,8 +25,8 @@ jobs:
   ANSIBLECOLLECTION:
     # don't run on pull request from ourselves
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
-    uses: ./reusable-ansiblecollection.yml
+    uses: .github/workflows/reusable-ansiblecollection.yml
     with:
-      repo: .github/workflows/ansible_collection_skeleton@collections
+      repo: mafalb/ansible_collection_skeleton@collections
     
 ...
