--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,6 +27,7 @@ jobs:
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     uses: ./.github/workflows/reusable-ansiblecollection.yml
     with:
-      repo: mafalb/ansible_collection_skeleton@collections
+      repo: mafalb/ansible_collection_skeleton
+      ref: collections
     
 ...
