--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -100,7 +100,7 @@ jobs:
           collection_name=$(ls collections/ansible_collections/*/*/)
 
           # set working directory for following steps
-          echo "working-directory="collections/ansible_collections/${namespace}/${collection_name}" >>"$GITHUB_ENV"
+          echo working-directory="collections/ansible_collections/${namespace}/${collection_name}" >>"$GITHUB_ENV"
 
           # after that install mafalb.ansible
           ansible-galaxy collection install git+${{ github.server_url }}/mafalb/ansible-collection-ansible.git -p collections
