--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -99,8 +99,10 @@ jobs:
           namespace=$(ls collections/ansible_collections/*/)
           collection_name=$(ls collections/ansible_collections/*/*/)
 
+          echo collection $namespace/$collection_name
+
           # set working directory for following steps
-          echo working-directory="collections/ansible_collections/${namespace}/${collection_name}" >>"$GITHUB_ENV"
+          echo working-directory=collections/ansible_collections/$namespace/$collection_name" >>"$GITHUB_ENV"
 
           # after that install mafalb.ansible
           ansible-galaxy collection install git+${{ github.server_url }}/mafalb/ansible-collection-ansible.git -p collections
