--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -100,10 +100,11 @@ jobs:
           collection_name=$(ls -d collections/ansible_collections/*/*/)
 
           echo collection $namespace/$collection_name
+          tree collections
 
           # set working directory for following steps
           echo working-directory=collections/ansible_collections/$namespace/$collection_name" >>"$GITHUB_ENV"
-
+          
           # after that install mafalb.ansible
           ansible-galaxy collection install git+${{ github.server_url }}/mafalb/ansible-collection-ansible.git -p collections
 
