default to github.sha, not github.ref

--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -17,7 +17,7 @@ on: # yamllint disable-line rule:truthy
         default: ${{ github.repository }}
       ref:
         type: string
-        default: ${{ github.ref }}
+        default: ${{ github.sha }}
 
 jobs:
 
