--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,6 +36,6 @@ jobs:
     uses: ./.github/workflows/reusable-ansiblecollection.yml
     with:
       repo: mafalb/ansible-test-collections
-      ref: ${{ vars.CI_BRANCH }} 
-    
+#      ref: ${{ vars.CI_BRANCH }}
+
 ...
