--- a/.github/workflows/reusable-environment.yml
+++ b/.github/workflows/reusable-environment.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Set the name of the environment
         id: set_name
         run: |
-          if [ "${{ github.ref_name }}" = "main" ]; then
+          if [ "${{ github.ref_name }}" = "main" -o "${{ github.ref_name }}" = "master" ]; then
             echo "::set-output name=env_name::prod"
           else
             echo "::set-output name=env_name::dev"
