--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -24,9 +24,10 @@ jobs:
   validate_inputs:
     runs-on: ubuntu-22.04
     steps:
-      run: |
-        default_branch=$(gh api repos/{{ github.repository }} --jq '.default_branch')
-        echo $default_branch
+      - name: bla
+        run: |
+          default_branch=$(gh api repos/{{ github.repository }} --jq '.default_branch')
+          echo $default_branch
 
   getenv:
     # don't run on pull request from ourselves
