--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -120,7 +120,7 @@ jobs:
         run: |
 
           # install the collection we want to test
-          ansible-galaxy collection install git+${{ github.server_url }}/${CI_REPO}.git,${CI_REF} -p collections
+          ansible-galaxy collection install git+"${{ github.server_url }}"/"$CI_REPO".git,"$CI_REF" -p collections
 
           # note that namespace and collection_name are not necessarily the same
           # as github.repository_owner and similar variables.
