repo and ref were not set

--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -43,8 +43,8 @@ jobs:
               repo="${{ github.repository }}"
               ref="${{ github.sha }}"
           fi
-          echo "::set-output name=repo::repo"
-          echo "::set-output name=ref::ref"
+          echo "::set-output name=repo::$repo"
+          echo "::set-output name=ref::$ref"
 
   ansible-test:
     runs-on: ubuntu-22.04
