--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout ourself
-        uses: action/checkout@v4
+        uses: actions/checkout@v4
         
       - name: Lint config is present
         run: |
