--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,17 +24,7 @@ jobs:
 
   lint:
     runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout ourself
-        uses: actions/checkout@v4
-        
-      - name: Lint config is present
-        run: |
-          test -r .yamllint
-
-      - name: Lint the YAMLs
-        run: |
-          yamllint -s .
+    uses: ./.github/workflows/reusable-yamllint.yml
 
   ANSIBLECOLLECTION:
     # don't run on pull request from ourselves
