--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -7,7 +7,7 @@
 
 name: ANSIBLECOLLECTION
 
-on: # yamllint disable-line rule:truthy
+on:  # yamllint disable-line rule:truthy
 
   # make it reusable
   workflow_call:
@@ -137,7 +137,7 @@ jobs:
 
           # save the directory of our collection for future use
           echo working-directory=collections/ansible_collections/$namespace/$collection_name >>"$GITHUB_ENV"
-          
+
       - name: Checkout mafalb.ansible
         working-directory: ${{ github.workspace }}
         run: ansible-galaxy collection install git+${{ github.server_url }}/mafalb/ansible-collection-ansible.git -p collections
@@ -145,7 +145,11 @@ jobs:
       - name: Install ansible
         working-directory: collections/ansible_collections/mafalb/ansible
         run: |
-          ansible-playbook -D playbooks/install-ansible.yml -e '{"virtualenv_packages":["_ansible==${{ matrix.ansible_version }}", "ansible-lint${{ matrix.ansible_lint_specifier }}", "_ansible_test", "flake8", "antsibull-docs", "rstcheck-core"]}' -e virtualenv_python=python${{ matrix.python_version }} -t all,debug
+          ansible-playbook -D playbooks/install-ansible.yml \
+            -e '{"virtualenv_packages":["_ansible==${{ matrix.ansible_version }}",
+                                        "ansible-lint${{ matrix.ansible_lint_specifier }}",
+                                        "_ansible_test", "flake8", "antsibull-docs", "rstcheck-core"]}'\
+            -e virtualenv_python=python${{ matrix.python_version }} -t all,debug
         env:
           ANSIBLE_COLLECTIONS_PATH: ../../..
 
