--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -231,9 +231,12 @@ jobs:
         working-directory: ${{ env.working-directory }}
         run: |
           source ~/.virtualenvs/ansible/bin/activate
-          mkdir /tmp/collections
-          ansible-galaxy -vvvv collection list -p /tmp/collections
-          ansible-galaxy -vvvv collection install community.general -p /tmp/collections
-          bash tests/docs.sh requirements
+          antsibull-docs sphinx-init --use-current --copyright "Markus Falb (c) <markus.falb@mafalb.at> GPL-3.0-or-later" --dest-dir tests/output/doc mafalb.ansible
+          antsibull-docs lint-collection-docs --plugin-docs --no-skip-rstcheck .
+          cd tests/output/doc
+	        pip install -r requirements.txt -c "${VIRTUAL_ENV}"/constraints.txt
+          ./build.sh
+        env:
+          ANSIBLE_COLLECTIONS_PATH: ../../..
 
 ...
