--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -47,8 +47,8 @@ jobs:
               repo="${{ github.repository }}"
               ref="${{ inputs.ref }}"
           fi
-          echo "::set-output name=repo::$repo"
-          echo "::set-output name=ref::$ref"
+          run: echo "{repo}={$repo}" >> $GITHUB_OUTPUT
+          run: echo "{ref}={$ref}" >> $GITHUB_OUTPUT
 
   ansible-test:
     runs-on: ubuntu-22.04
@@ -234,7 +234,7 @@ jobs:
           antsibull-docs sphinx-init --use-current --copyright "Markus Falb (c) <markus.falb@mafalb.at> GPL-3.0-or-later" --dest-dir tests/output/doc mafalb.ansible
           antsibull-docs lint-collection-docs --plugin-docs --no-skip-rstcheck .
           cd tests/output/doc
-	        pip install -r requirements.txt -c "${VIRTUAL_ENV}"/constraints.txt
+	        pip install -r requirements.txt -c "$VIRTUAL_ENV"/constraints.txt
           ./build.sh
         env:
           ANSIBLE_COLLECTIONS_PATH: ../../..
