--- a/.github/workflows/reusable-environment.yml
+++ b/.github/workflows/reusable-environment.yml
@@ -29,9 +29,9 @@ jobs:
         id: set_name
         run: |
           if [ "${{ github.ref_name }}" = "main" -o "${{ github.ref_name }}" = "master" ]; then
-            echo "::set-output name=env_name::prod"
+            echo "{env_name}={prod}" >> $GITHUB_OUTPUT
           else
-            echo "::set-output name=env_name::dev"
+            echo "{env_name}={dev}" >> $GITHUB_OUTPUT
           fi
 
 ...
