--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -237,7 +237,9 @@ jobs:
           source ~/.virtualenvs/ansible/bin/activate
           ansible-galaxy collection install community.general -p /tmp/collections
           mkdir -p tests/output/doc
-          antsibull-docs sphinx-init --use-current --copyright "Markus Falb (c) <markus.falb@mafalb.at> GPL-3.0-or-later" --dest-dir tests/output/doc ${{ env.namespace }}/${{ env.collection_name }}
+          antsibull-docs sphinx-init --use-current \
+            --copyright "Markus Falb (c) <markus.falb@mafalb.at> GPL-3.0-or-later" \
+            --dest-dir tests/output/doc ${{ env.namespace }}/${{ env.collection_name }}
           echo VIRTUAL_ENV $VIRTUAL_ENV
           antsibull-docs lint-collection-docs --plugin-docs --no-skip-rstcheck .
           cd tests/output/doc
