--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -241,7 +241,8 @@ jobs:
             --copyright "Markus Falb (c) <markus.falb@mafalb.at> GPL-3.0-or-later" \
             --dest-dir tests/output/doc ${{ env.namespace }}/${{ env.collection_name }}
           echo VIRTUAL_ENV $VIRTUAL_ENV
-          antsibull-docs lint-collection-docs --plugin-docs --no-skip-rstcheck .
+          #antsibull-docs lint-collection-docs --plugin-docs --no-skip-rstcheck .
+          echo gugu
           cd tests/output/doc
           pip install -r requirements.txt -c "$VIRTUAL_ENV"/constraints.txt
           ./build.sh
