--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -235,11 +235,12 @@ jobs:
           ANSIBLE_COLLECTIONS_PATH: ../../..:/tmp/collections
         run: |
           source ~/.virtualenvs/ansible/bin/activate
+          test -r "$VIRTUAL_ENV"/constraints.txt
           ansible-galaxy collection install community.general -p /tmp/collections
           mkdir -p tests/output/doc
           antsibull-docs sphinx-init --use-current \
             --copyright "Markus Falb (c) <markus.falb@mafalb.at> GPL-3.0-or-later" \
-            --dest-dir tests/output/doc ${{ env.namespace }}/${{ env.collection_name }}
+            --dest-dir tests/output/doc ${{ env.namespace }}.${{ env.collection_name }}
           echo VIRTUAL_ENV $VIRTUAL_ENV
           #antsibull-docs lint-collection-docs --plugin-docs --no-skip-rstcheck .
           echo gugu
