--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -232,18 +232,22 @@ jobs:
         if: matrix.ansible_version != '2.12'
         working-directory: ${{ env.working-directory }}
         env:
-          ANSIBLE_COLLECTIONS_PATH: ../../..:/tmp/collections
+          ANSIBLE_COLLECTIONS_PATH: "../../..:/tmp/collections"
         run: |
           source ~/.virtualenvs/ansible/bin/activate
           test -r "$VIRTUAL_ENV"/constraints.txt
           test -n "${{ env.namespace }}"
           test -n "${{ env.collection_name }}"
+          test -n "$ANSIBLE_COLLECTIONS_PATH"
+          ABSPATH=$(cd ../../; dirname "$(pwd)")
+          export ANSIBLE_COLLECTIONS_PATH="$ABSPATH:/tmp/collections"
           ansible-galaxy collection install community.general -p /tmp/collections
           mkdir -p tests/output/doc
           antsibull-docs sphinx-init --use-current \
             --copyright "Markus Falb (c) <markus.falb@mafalb.at> GPL-3.0-or-later" \
             --dest-dir tests/output/doc ${{ env.namespace }}.${{ env.collection_name }}
           echo VIRTUAL_ENV $VIRTUAL_ENV
+          echo $ANSIBLE_COLLECTIONS_PATH
           #antsibull-docs lint-collection-docs --plugin-docs --no-skip-rstcheck .
           echo gugu
           cd tests/output/doc
