use the reusable-selectbranch.yml locally

--- a/.github/workflows/reusable-selectbranch.yml
+++ b/.github/workflows/reusable-selectbranch.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Return the targeted branch for downloads from other repositories
         id: select
         run: |
-            if test "${{ inputs.targeted_branch }} = "main"; then
+            if test "${{ inputs.targeted_branch }}" = "main"; then
                 branch="main"
             elif test "${{ github.ref_name }}" = "main"; then
                 branch="main"  # we know that main is the master branch of mafalb/ansible-test-collections
