--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,16 +19,27 @@ on:  # yamllint disable-line rule:truthy
   schedule:
     - cron: '48 11 * * 5'
   workflow_dispatch:
+    inputs:
+      targeted_branch:
+        type: choice
+        options:
+          - dev
+          - main
 
 jobs:
 
   lint:
     uses: ./.github/workflows/reusable-yamllint.yml
 
-  ANSIBLECOLLECTION:
-    # don't run on pull request from ourselves
-    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
-    uses: ./.github/workflows/reusable-ansiblecollection.yml
+  SELECTBRANCH:
+    uses: ././github/workflows/reusable-selectbranch.yml
+    with:
+      branch: ${{ inputs.targeted_branch }}
     needs: lint
+
+  ANSIBLECOLLECTION:
+    uses: ./.github/workflows/reusable-ansiblecollection.yml
+    needs:
+      - lint
 
 ...
